<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="practicaltest01.eim.systems.cs.pub.ro.practicaltest01var08.PracticalTest01Var08MainActivity">

   <EditText
       android:id="@+id/riddle_edit"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="7"
       android:saveEnabled="false"
       android:hint="@string/riddleEdit"/>
    <EditText
        android:id="@+id/answer_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:saveEnabled="false"
        android:hint="@string/answerEdit"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"/>

</LinearLayout>
